# simple-react-agent

./: README.md  pyproject.toml
src/react/: __main__.py  agent.py
